<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog_device_back"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_device_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/single_ecg"
        android:textColor="@color/google_black"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/dialog_device_status"
            android:textColor="@color/google_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_device_connect_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/dialog_device_status_not_connect"
            android:textColor="@color/google_black"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/dialog_device_model"
            android:textColor="@color/google_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_device_model_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/dialog_device_model_bp"
            android:textColor="@color/google_black"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/dialog_device_version"
            android:textColor="@color/google_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_device_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/dialog_device_version_default"
            android:textColor="@color/google_black"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/dialog_device_mac"
            android:textColor="@color/google_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dialog_device_mac_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/dialog_device_mac_default"
            android:textColor="@color/google_black"
            android:textSize="16sp" />
    </RelativeLayout>

    <!--<Button
        android:id="@+id/dialog_device_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_bp_result_button"
        android:padding="10dp"
        android:text="删除当前设备"
        android:textColor="@color/button_default_text_back"
        android:textSize="20sp" />-->

</LinearLayout>